Fix issue with svg insert markers on Firefox and hide schools button on modile

--- a/src/css/analytics.less
+++ b/src/css/analytics.less
@@ -775,3 +775,8 @@ text.delete-button-symbol {
     }
   }
 }
+
+.svg-insert svg.svg-icon-svg {
+  width: 14px;
+  height: 23px;
+}
