--- a/src/css/finder.less
+++ b/src/css/finder.less
@@ -256,17 +256,9 @@ html {
   }
 }
 
-#toggleHideServicesButton {
-  margin-right: 0;
-  width: 100%;
-
-  @media (min-width: 768px) {
-    width: auto;
-    margin-right: 25px;
-  }
-}
-
-#backToSearchButton {
+#toggleHideServicesButton,
+#backToSearchButton,
+#toggleSchoolView {
   margin-right: 0;
   width: 100%;
 
